terraform/modules/security/main.tf
# ALB Security Group
resource "aws_security_group" "alb_sg" {
    name   = "strapi-alb-sg-jayani"
    vpc_id = var.vpc_id

    ingress {
        description = "Allow HTTP"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "Allow HTTPS"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

# ECS Security Group
resource "aws_security_group" "ecs_sg" {
    name   = "strapi-ecs-sg-jayani"
    vpc_id = var.vpc_id

    ingress {
        description     = "Allow traffic from ALB to Strapi"
        from_port       = 1337
        to_port         = 1337
        protocol        = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
